fix overflow

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,8 +22,8 @@ html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+  overflow-x: hidden;
   // overflow-y: scroll;
-  // overflow-x: hidden;
 }
 
 body {
@@ -41,8 +41,7 @@ body {
   min-height: 100vh;
   margin: 0 auto;
 
-  // @media (max-width: 1000px) {
-    @media (max-width: vars.$mobile-breakpoint) {
+  @media (max-width: vars.$mobile-breakpoint) {
     display: grid;
     grid-template-areas:
       "aside"
@@ -58,7 +57,7 @@ main {
   padding-left: 1rem;
   padding-right: 1rem;
 
-  @media (max-width: 1000px) {
+  @media (max-width: vars.$mobile-breakpoint) {
     width: calc(vars.$page-width + vars.$sidebar-width);
     padding-left: 0;
     padding-right: 0;
@@ -73,7 +72,7 @@ aside {
   padding-left: 1rem;
   padding-right: 1rem;
 
-  @media (max-width: 1000px) {
+  @media (max-width: vars.$mobile-breakpoint) {
     width: calc(vars.$page-width + vars.$sidebar-width);
     padding-left: 0;
     padding-right: 0;
