--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -13,7 +13,7 @@ code {
 
 pre {
   padding: 0.25rem 0.5rem;
-  // overflow-x: auto;
+  overflow-x: auto;
 
   > code {
     border: 0;
